test/files/neg/t3015.check
t3015.scala:7: error: type mismatch;
 found   : _$1(in value foo) where type _$1(in value foo) <: java.lang.String
 required: (some other)_$1(in value foo) where type (some other)_$1(in value foo)
  val b(foo) = "foo" 
      ^
t3015.scala:7: error: recursive value foo needs type
  val b(foo) = "foo" 
       ^
two errors found
